# vig

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  mise.toml  prek.toml  zipsign.pub
.github/workflows/: build.yml  ci.yml  release.yml
docs/: README.ja.md
src/: app.rs  event.rs  main.rs  syntax.rs  tui.rs  update.rs
src/git/: diff.rs  mod.rs  repository.rs  watcher.rs
src/github/: client.rs  mod.rs  state.rs  types.rs
src/ui/: branch_action_menu.rs  branch_selector.rs  commit_log.rs  confirm_dialog.rs  diff_view.rs  file_tree.rs  layout.rs  mod.rs  reflog.rs  status_bar.rs
src/ui/github/: detail_view.rs  issue_list.rs  layout.rs  mod.rs  pr_list.rs
tape/: demo-branch.tape  demo-github.tape  demo-reflog.tape  demo-search.tape  demo-yank.tape  demo.tape
